Add directives for shopping list, shopping list item and checkout

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -11,6 +11,7 @@
     <script src="/angular-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/main.js"></script>
+    <script src="/js/common/config.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
