--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <base href="/" />
     <title>Fullstack Academy Generated Application</title>
+    <script src="/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="/lodash/index.js"></script>
@@ -11,17 +12,9 @@
     <script src="/angular-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/main.js"></script>
-    <script src="/js/common/config.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
-    <ul class = "side-nav fixed" style="width: 240px">
-        <li class= "bold">
-            <a class="item"> IPA </a>
-        </li>
-    </ul>
-
-    </div>
     <div ui-view></div>
 </body>
 </html>
