--- a/browser/js/common/templates/home.html
+++ b/browser/js/common/templates/home.html
@@ -25,7 +25,7 @@
 </div>
 </div>
  -->
-<div class="col-sm-3 col-md-3 col-lg-3">
+<div class="col-sm-3 col-md-3 col-lg-3 sideBarContainer" >
   <sidebar></sidebar>
 </div>
 
