started work with product

--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -1,1 +1,22 @@
-<img src="http://placehold.it/350x150">
+<div class ='product'>
+    <div class = 'col-xs-12 col-sm-6 col-md-6 col-lg-3'>
+        <img src="http://placehold.it/200x300">
+        <button type="button" class="btn btn-warning">Back to Browse</button>
+        <button type="button" class="btn btn-success"">Add to Cart</button>
+    </div>
+    <div class = 'col-xs-12 col sm-3 col md-3 col lg-3'>
+            <h1>Name Placeholder {{ name }}</h1>
+            <h3>Brewery: {{ brewery }}</h3>
+            <h3>Style: {{ style }}</h3>
+            <div>
+            <h3>Description:</h3>
+            <p1>
+                {{description}}Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent ultrices tristique vehicula. Nam eu eros nulla. Sed venenatis condimentum venenatis.
+                Ut malesuada, lectus quis porttitor volutpat, sapien lacus malesuada ligula, eu lobortis nibh felis
+                eget arcu. Nam aliquet felis varius aliquam sollicitudin. Aliquam suscipit arcu ac laoreet dignissim.
+                Duis pretium dolor et sem finibus, vel ullamcorper erat mollis. Proin eget suscipit dolor.
+            </p1>
+            </div>
+        </div>
+</div>
