--- a/browser/js/common/templates/home.html
+++ b/browser/js/common/templates/home.html
@@ -25,9 +25,10 @@
 </div>
 </div>
  -->
-<div class="col-sm-3 col-md-3 col-lg-3">
+<div class="col-sm-2 col-md-2 col-lg-2">
   <sidebar></sidebar>
 </div>
 
-
-<div ui-view></div>
+<div class = "col-sm-10 col-md-10 col-lg-10">
+    <div ui-view></div>
+</div>
