--- a/browser/js/common/templates/home.html
+++ b/browser/js/common/templates/home.html
@@ -29,5 +29,6 @@
 <div class="col-sm-3 col-md-3 col-lg-3 sideBarContainer" >
   <sidebar></sidebar>
 </div>
-
-<div ui-view></div>
+<div class="col-sm-9 col-md-9 col-lg-9">
+  <div ui-view></div>
+</div>
