--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -1,1 +1,17 @@
-<img src="http://placehold.it/350x150">
+<div class="modal-header">
+    <h2 class="modal-title">{{beer.name}}</h2>
+</div>
+<div class="modal-body">
+    <img class = "pull-left" src="http://www.fillmurray.com/400/300">
+    <h4>{{beer.brewery_oid.name}}</h4>
+    <h4>Style: {{beer.style_oid.style_name}}</h4>
+    <h5>{{beer.descript}}</h5>
+    
+</div>
+<div class="modal-footer">
+	<i class="fa fa-minus-circle fa-2x quantity" ng-click ="minus()"></i>
+	<input type="text" id="quantity" value = {{quantity}}></input>
+	<i class="fa fa-plus-circle fa-2x quantity" ng-click = "plus()"></i>
+	<button class = "btn btn-default"><i class="fa fa-cart-plus fa-2x"></i> </button>
+	<alert type = "danger" ng-show ="error">{{error}}</alert>
+</div>
