--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -10,17 +10,16 @@
         <rating ng-model="beer.rating" max="5" readonly="isReadOnly" on-hover="hoveringOver(value)" on-leave="overStar = null"></rating>
         <h5>{{beer.descript}}</h5>
         <h4 class = "pull-right">{{beer.abv}}%</h4>
-        <button class = "pull-left" ng-click = "toggleReview()">Show the Reviews</button>
+        <button class="pull-left btn btn-default" ng-click = "toggleReview()">Show the Reviews</button>
     </div>
     <div ng-show = "review">
-        <ul>
-            <li>rachel</li>
-            <li>rachel</li>
-            <li>rachel</li>
-            <li>rachel</li>
-            <li>rachel</li>
+        <ul class="review-list">
+            <review ng-repeat="review in reviews"></review>
         </ul>
-            <button class = "pull-left" ng-click = "toggleReview()">Go back to Details</button>
+        <div class="pull-left">
+            <button class = "pull-left btn btn-default" ng-click = "toggleReview()">Beer Details</button>
+            <button class = "pull-left btn btn-default" ng-show="user">Review Beer</button>
+        </div>
     </div>
     
 </div>
@@ -29,6 +28,6 @@
 	<i class="fa fa-minus-circle fa-2x quantity" ng-click ="minus()"></i>
 	<input type="text" id="quantity" value = {{quantity}}></input>
 	<i class="fa fa-plus-circle fa-2x quantity" ng-click = "plus()"></i>
-	<button class = "btn btn-default"><i class="fa fa-cart-plus fa-2x"></i> </button>
+	<button class="btn btn-default"><i class="fa fa-cart-plus fa-2x"></i> </button>
 	<alert type = "danger" ng-show ="error">{{error}}</alert>
 </div>
