--- a/browser/js/common/templates/checkout.html
+++ b/browser/js/common/templates/checkout.html
@@ -2,11 +2,7 @@
     <button class = "btn btn-warning" ng-click = "back()">Back to Shopping</button>
     <div class = "container">
         <ul>
-            <li ng-repeat = "item in cart">
-                <h4>{{item.item.name}}</h4>
-                <h5>{{item.item.price}}</h5>
-                <h5>{{item.quantity}}</h5>
-            </li>
+            <li>{{user}}</li>
         </ul>
         <h4>{{total}}</h4>
         <button class = "btn btn-success" ng-click = "checkout(cart)">Check Out</button>
