--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -1,9 +1,10 @@
 <div class="modal-header">
     <h2 class="modal-title">{{beer.name}}</h2>
     <h4 class = "pull-right">${{beer.price}}</h4>
+    <button class="btn btn-warning" ng-show="user.admin">Edit</button>
 </div>
 <div class="modal-body">
-    <img class = "pull-left" src="http://www.fillmurray.com/400/400">
+    <img class = "pull-left" src="{{beer.photo}}">
     
     <div ng-show = "visible.detail">
         <h4>{{beer.brewery_oid.name}}</h4>
@@ -28,15 +29,16 @@
         <label>Rating</label>
         {{userRating}}
         <rating ng-model="userRating" max="5" readonly="false" on-hover="hoveringOver(value)" on-leave="overStar = null"></rating>
-        <form>
+        <form >
             <label>Comments</label>
-            <input type="text" ng-model="userComment"></input>
+            <input type="text" ng-model="userComment" class="form-control" required></input>
+            <div>
+                <button class="btn btn-default pull-left" ng-click="toggleVisible('review')">Back to Reviews</button>
+                <input type="submit" value="Submit" ng-submit="submitReview()"/>
+            </div>
         </form>
-        <div>
-            <button class="btn btn-default pull-left" ng-click="toggleVisible('review')">Back to Reviews</button>
-            <button class="btn btn-default pull-left" ng-click="submitReview()">Submit</button>
-        </div>
     </div>
+
     
 </div>
 <div class="modal-footer">
