--- a/browser/js/common/templates/admin.html
+++ b/browser/js/common/templates/admin.html
@@ -2,11 +2,20 @@
 	<div class="btn-group" role="group" aria-label="...">
 	  <button type="button" class="btn btn-default" ng-class="{btnSelected: adminAction.edit}" ng-click="toggleAction('edit')" >Edit Beer</button>
 	  <button type="button" class="btn btn-default" ng-class="{btnSelected: adminAction.add}" ng-click="toggleAction('add')">Add New Beer</button>
+	  <button type="button" class="btn btn-default" ng-class="{btnSelected: adminAction.order}" ng-click="toggleAction('order')">Edit Orders</button>
 	</div>
-	<select class="form-control" ng-show="adminAction.edit">
+
+	<alert type="danger" ng-show="message">{{message}}</alert> 
+	<select class="form-control" ng-show="adminAction.edit" ng-model="selectedBeerId" ng-change="getBeer()">
+		<option value="" disabled selected>Select a Beer</option>
 		<option ng-repeat="beer in beers" value="{{beer._id}}">{{beer.name}}</option>
 	</select>
-	<editbeerform></editformbeer>
+	<div>	
+		<addbeerform name="addForm" cat="categories" style="styles" brew="breweries" ng-show="adminAction.add"></addformbeer>
+	</div>
+	<div>
+		<editbeerform beer="selectedBeer" name="addForm" cat="categories" style="styles" brew="breweries" update="upsertBeer()" name="editForm" ng-show="adminAction.edit"></editformbeer>
+	</div>
 </div>
 
 
