--- a/browser/js/common/templates/checkout.html
+++ b/browser/js/common/templates/checkout.html
@@ -5,7 +5,7 @@
             <li>{{user}}</li>
         </ul>
         <h4>{{total}}</h4>
-        <button class = "btn btn-success" ng-click = "checkout(cart)">Check Out</button>
+        <button class = "btn btn-success" ng-click = "checkout(user,cart)">Check Out</button>
 
     </div>
 </div>
