--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -124,8 +124,12 @@ ul.review-list {
     width: 80%;
   }
 
-.beer-select {
+.admin-select {
   width:30%;
   margin-left: 30px;
   margin-top: 20px;
+}
+
+.admin-options {
+  margin-left: 30px;
 }
