--- a/browser/js/common/templates/orderDetails.html
+++ b/browser/js/common/templates/orderDetails.html
@@ -3,12 +3,12 @@
 </div>
 <div class="modal-body">
     <ul>
-        <li ng-repeat="item in user.cart">
+        <li ng-repeat="item in cartObj">
             <a>{{ item.name }}</a>
         </li>
     </ul>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
+    <button class="btn btn-primary" ng-click="comfirm(user,cartObj)">Comfirm Order</button>
     <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
