--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -133,3 +133,11 @@ ul.review-list {
 .admin-options {
   margin-left: 30px;
 }
+
+.admin-input-float {
+  width: 50%;
+}
+
+.panel {
+  margin-top: 20px;
+}
