Add stock and photo to add/edit beer

--- a/browser/js/common/templates/admin.html
+++ b/browser/js/common/templates/admin.html
@@ -31,7 +31,7 @@
 	ng-show="adminAction.edit" 
 	ng-model="selectedBeerId" 
 	ng-change="getBeer()">
-		<option value="" disabled selected>Select a Beer</option>
+		<option value="" disabled selected>Select a Beer to Edit</option>
 		<option ng-repeat="beer in beers" value="{{beer._id}}">{{beer.name}}</option>
 	</select>
 
