Fix submit review

--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -33,7 +33,7 @@
             <input type="text" ng-model="userComment" class="form-control" required></input>
             <div>
                 <button class="btn btn-default pull-left" ng-click="toggleVisible('review')">Back to Reviews</button>
-                <input type="submit" value="Submit" ng-submit="submitReview()"/>
+                <input class="btn btn-default" type="submit" value="Submit" ng-click="submitReview()"/>
             </div>
         </form>
     </div>
