--- a/browser/js/common/templates/checkout.html
+++ b/browser/js/common/templates/checkout.html
@@ -7,6 +7,7 @@
 
         <h4>Your Total is: {{total}}</h4>
         <button class = "btn btn-success" ng-click = "displayOrder(user,cart)">Check Out</button>
+		<alert type = "warning" ng-show ="error">{{error}}</alert>
 
     </div>
 </div>
