--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -141,3 +141,16 @@ ul.review-list {
 .panel {
   margin-top: 20px;
 }
+.body{
+  @include clearfix;
+  margin-top:60px;
+}
+.col-lg-10{
+  float:right;
+}
+.col-md-10{
+  float:right;
+}
+.col-sm-10{
+  float:right;
+}
