--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -6,6 +6,7 @@
     <script src="/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
+    <link href='http://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
@@ -16,7 +17,7 @@
 </head>
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
-    <div ui-view></div>
+    <div ui-view class = "body"></div>
 </body>
 
 
