--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -1,21 +1,51 @@
-navbar {
-
+.navbar-inverse {
+  border-color:856941;
   display: block;
-  background: #a1a1a1;
+  background: #753100;
 
-  fullstack-logo {
-    padding-top: 10px;
-    margin-right: 20px;
-    width: 30px;
-  }
-
+  height:60px;
+  background-color:#856941;
   a {
     color: white;
     &:hover {
       color: white;
     }
   }
+  .container{
+    margin-left:0
+  }
+  .form-control{
+    float:left;
 
+  }
+  input {
+    border-radius: 24px;
+    color: #856941;
+  }
+
+  .logo{
+    font-family:'Bitter',serif;
+    padding-left:0;
+    font-size:26px;
+  }
+
+  .icon{
+    padding-top:10px;
+  }
+
+  .btn-sm{
+    color: #fefefe;
+    background-color: #856941;
+    border-color: #fefefe;
+    margin-right: 10px;
+  }
+
+  i {
+    color: #fefefe;
+  }
+  ul{
+    padding-top:5px;
+  }
   .nav > li > a {
     cursor: pointer;
     &.active {
@@ -29,15 +59,33 @@ navbar {
       background: transparent;
     }
   }
-
+  .navbar-brand{
+    margin-top:3px;
+    color:#fefefe;
+  }
   .login-button {
     float: right;
-    margin-top: 8px;
+    margin-top: 15px;
+    background-color:#0193b7;
+    color:#d1c5b7;
+    margin-left: 5px;
+    border-radius: 24px;
+  }
+.dropdown-toggle {
+    background-color:#856941;
+    color:#fefefe;
+    border-color: #fefefe;
+  }
+
+  .cart{
+    padding:5px;
+    height:30px;
+    margin-top:10px;
   }
 
   .welcome {
     float: right;
-    margin-top: 12px;
+    margin-top: 16px;
     span {
       color: white;
     }
