--- a/browser/js/common/templates/checkout.html
+++ b/browser/js/common/templates/checkout.html
@@ -6,7 +6,7 @@
         </ul>
 
         <h4>Your Total is: {{total}}</h4>
-        <button class = "btn btn-success" ng-click = "displayOrder(user,cart)">Check Out</button>
+        <button class = "btn btn-success" ng-click = "displayOrder(user,cartObj)">Check Out</button>
 		<alert type = "warning" ng-show ="error">{{error}}</alert>
 
     </div>
