Style modal window

--- a/browser/js/common/templates/admin.html
+++ b/browser/js/common/templates/admin.html
@@ -1,4 +1,4 @@
-<div>
+<div class="admin-body">
 
 	<div class="btn-group admin-options" role="group" aria-label="...">
 		<div class="btn-group" dropdown is-open="status.isopen">
