--- a/browser/js/common/templates/productDetails.html
+++ b/browser/js/common/templates/productDetails.html
@@ -1,21 +1,22 @@
 <div class="modal-header">
     <h2 class="modal-title">{{beer.name}}</h2>
-    <h4 class = "pull-right">${{beer.price}}</h4>
-    <button class="btn btn-warning" ng-show="user.admin">Edit</button>
+    <h4 >${{beer.price}}</h4>
+    <!-- <button class="btn btn-warning" ng-show="user.admin">Edit</button> -->
 </div>
 <div class="modal-body">
     <img class = "pull-left" src="{{beer.photo}}">
     
-    <div ng-show = "visible.detail">
+    <div class="modal-details" ng-show = "visible.detail">
         <h4>{{beer.brewery_oid.name}}</h4>
         <h4>{{beer.style_oid.style_name}}</h4>
         <rating ng-model="beer.rating" max="5" readonly="isReadOnly" on-hover="hoveringOver(value)" on-leave="overStar = null"></rating>
+        
         <h5>{{beer.descript}}</h5>
         <h4 class = "pull-right">{{beer.abv}}%</h4>
         <button class="pull-left btn btn-default" ng-click = "toggleVisible('review')">Reviews</button>
     </div>
 
-    <div ng-show = "visible.review">
+    <div class="modal-details" ng-show = "visible.review">
         <ul class="review-list">
             <review ng-repeat="review in reviews"></review>
         </ul>
@@ -25,12 +26,12 @@
         </div>
     </div>
 
-    <div ng-show="visible.edit">
+    <div class="modal-details" ng-show="visible.edit">
         <label>Rating</label>
         <rating ng-model="userRating" max="5" readonly="false" on-hover="hoveringOver(value)" on-leave="overStar = null"></rating>
         <form>
             <label>Comments</label>
-            <input type="text" ng-model="userComment" class="form-control" required></input>
+            <textarea type="text" ng-model="userComment" class="form-control" required></textarea>
             <div>
                 <button class="btn btn-default pull-left" ng-click="toggleVisible('review')">Back to Reviews</button>
                 <input class="btn btn-default" type="submit" value="Submit" ng-click="submitReview()"/>
