--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -50,13 +50,14 @@
   .nav > li > a {
     cursor: pointer;
     &.active {
-      color: #f30046;
+      color: #fefefe;
     }
     &:hover {
-      transition: color 0.2s;
+      //transition: color 0.2s;
+      color: #0193b7;
     }
     &:focus {
-      color: #f30046;
+      color: #0193b7;
       background: transparent;
     }
   }
@@ -72,6 +73,16 @@
     margin-left: 5px;
     border-radius: 24px;
   }
+
+ .logout-button {
+    float: right;
+    margin-top: -5px;
+    background-color:#0193b7;
+    color:#d1c5b7;
+    margin-left: 5px;
+    border-radius: 24px;
+ }
+
 .dropdown-toggle {
     background-color:#856941;
     color:#fefefe;
@@ -89,6 +100,7 @@
     margin-top: 16px;
     span {
       color: white;
+      margin-top: 10px;
     }
     a {
       color: #f30046;
