--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -138,19 +138,30 @@ ul.review-list {
   width: 50%;
 }
 
+.admin-body{
+  @include clearfix;
+  height: 100vh;
+}
+
 .panel {
   margin-top: 20px;
 }
 .body{
   @include clearfix;
+  height: 100vh;
   margin-top:60px;
+  background-color: #063e53;
 }
 .col-lg-10{
   float:right;
+  height: 100vh;
+
 }
 .col-md-10{
   float:right;
+  height: 100vh;
 }
 .col-sm-10{
   float:right;
+  height: 100%;
 }
