--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -108,4 +108,19 @@
     }
   }
 
+  ul.dropdown-menu {
+    background-color: #d1c5b7;
+    font-family: 'Raleway', sans-serif;
+    h5 {
+      margin-left: 5px;
+    }
+    .btn-default {
+      margin-left: 35px;
+      color: #856941;
+    }
+    li{
+      margin-left: 5px;
+    }
+  }
+
 }
