--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -1,10 +1,10 @@
 .navbar-inverse {
-  border-color:856941;
   display: block;
   background: #753100;
-
+  border-color:#856941;
   height:60px;
   background-color:#856941;
+  
   a {
     color: white;
     &:hover {
@@ -14,6 +14,7 @@
   .container{
     margin-left:0;
     margin-right:0;
+    width:100%
   }
   .form-control{
     float:left;
@@ -71,6 +72,10 @@
     color:#d1c5b7;
     margin-left: 5px;
     border-radius: 24px;
+    font-family: 'Raleway', sans-serif;
+  }
+  #login{
+    font-family: 'Raleway', sans-serif;
   }
 .dropdown-toggle {
     background-color:#856941;
