Change nav font

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -2,6 +2,7 @@
   border-color:856941;
   display: block;
   background: #753100;
+  font-family: "Raleway", sans-serif;
 
   height:60px;
   background-color:#856941;
@@ -101,6 +102,7 @@
     span {
       color: white;
       margin-top: 10px;
+      font-family: "Raleway", sans-serif;
     }
     a {
       color: #f30046;
