--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -1,4 +1,10 @@
 #login-form {
   width: 60%;
   margin: 0 auto;
+  color: #fefefe;
+  .btn-default{
+  	background-color:#856941;
+	border-color:#856941;
+	color:#fefefe;
+  }
 }
