--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -174,7 +174,7 @@ ul.review-list {
 #display{
   padding-left:5%;
   .carousel-inner{
-    background-color = #0193b7;
+    background-color:#0193b7;
   }
 }
 
