--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -172,10 +172,15 @@ ul.review-list {
 }
 
 #display{
-  padding-left:5%;
-  .carousel-inner{
-    background-color = #0193b7;
-  }
+  // margin-left: 50px; 
+  // .caption-img {
+  //   margin-left: 15% !important;
+  // }
 }
 
+
+.browse {
+  font-family: "Raleway", sans-serif;
+  color: #d1c5b7;
+}
 
