--- a/browser/scss/sidebar/main.scss
+++ b/browser/scss/sidebar/main.scss
@@ -65,6 +65,7 @@ $accentColor:#FF00DC;
 .focus{
     text-decoration: none;
     background: rgba(255,255,255,0.2);
+    color: #0193b7 !important;
 }
 .sidebar-nav li a {
     display: block;
