--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <base href="/" />
-    <title>This it the HopShop</title>
+    <title>This is HopShop</title>
     <script src="/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
